<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="place">Place</string>
    <string name="get_weather">Get Weather</string>
    <string name="date">Date: %1$s</string>
    <string name="average_temperature">Average temperature: %1$d°C</string>
    <string name="pressure">Pressure: %1$d</string>
    <string name="humidity">Humidity: %1$d%%</string>
    <string name="description">Description: %1$s</string>
    <string name="loading">Loading...</string>
    <string name="empty_result">Empty Result</string>
    <string name="speak">Speak</string>
    <string name="listening">Listening...</string>
</resources>